# tencent_meeting_service

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.test  README.md  UPDATE.md  docker-compose.test.yml  docker-compose.yml  meetings.csv
data/: meetings.csv
src/: auth.rs  client.rs  client_mock.rs  client_test.rs  integration_tests.rs  lib.rs  main.rs  routes.rs  tests.rs
src/handlers/: api.rs  api_test.rs  mod.rs  test.rs
src/models/: common.rs  form.rs  meeting.rs  mod.rs
src/services/: database.rs  database_test.rs  mod.rs  time_slots.rs  time_slots_test.rs
src/tests/: client_test.rs  mod.rs
src/tests/common/: fixtures.rs  mocks.rs  mod.rs  test_utils.rs
src/tests/handlers/: api_test.rs
src/tests/integration/: api_test.rs  mod.rs  webhook_test.rs  workflow_test.rs
src/tests/services/: database_test.rs  mod.rs  time_slots_test.rs
