[package]
name = "tencent_meeting_service"
version = "0.1.0"
edition = "2021"
description = "Tencent Meeting API service that connects with form service"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
hyper = { version = "1", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"

# Cryptography and authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = { version = "0.22", features = ["std"] }

# Utilities
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

# Error tracking (optional)
sentry = { version = "0.36.0", optional = true }

[features]
default = []
sentry-monitoring = ["sentry"]

[dev-dependencies]
# Testing utilities
mockall = "0.12"
tempfile = "3"
axum-test = "14"
